column shift fixed

--- a/sass/components/_Column.scss
+++ b/sass/components/_Column.scss
@@ -5,12 +5,9 @@
   justify-content: space-evenly;
   margin-top: 5px 0;
   text-align: center;
-display: -webkit-box;
-  display: -ms-flexbox;
-  -webkit-box-pack: space-evenly;
-  -ms-flex-pack: space-evenly;
-  width: 100%;
+  width:95%;
   align-items: center;
+ 
   margin: 0 auto;
   border-radius: 15px;
      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2),
@@ -24,11 +21,19 @@ display: -webkit-box;
  
  
 }
-.column{}
+
+
 
 .column h1, h2,h3,h4,h5,h6, p{
  padding-bottom: 45px;
-
+text-align: center;
+margin-left: auto;
+margin-right: auto;
+letter-spacing: 2px;
+}
+.column h2
+{
+color: #141114;
 }
 
 
@@ -49,10 +54,7 @@ border-radius: 16px;
     justify-content: center;
     gap: .3rem;
     margin-bottom: 5rem;
-  display: -webkit-box;
-    display: -ms-flexbox;
-    -webkit-box-pack: space-evenly;
-    -ms-flex-pack: space-evenly;
+ 
   
 }
 
